--- a/app/resources/en/translation/executors/jointapplication.json
+++ b/app/resources/en/translation/executors/jointapplication.json
@@ -1,11 +1,12 @@
 {
   "title": "People applying for probate",
   "question": "Do you want to apply with anyone else?",
-  "Paragraph1": "If there are other people entitled to inherit, you can make a joint application with up to 3 of them. They will also be named on the grant of probate.",
-  "Paragraph2": "All applicants will be given the legal right to deal with {deceasedName}&rsquo;s estate. This includes:",
+  "paragraph1": "If there are other people entitled to inherit, you can make a joint application with up to 3 of them. They will also be named on the grant of probate.",
+  "paragraph2": "All applicants will be given the legal right to deal with {deceasedName}&rsquo;s estate. This includes:",
   "bullet1": "collecting the estate’s assets (property, money and possessions)",
   "bullet2": "paying any taxes and debts",
-  "bullet3": "distributing what is left to the people entitled to it (the &lsquo;beneficiaries&rsquo;)",
+  "bullet3": "distributing what is left to the people entitled to it",
+  "paragraph3": "Not applying does not affect a person’s entitlement to inherit.",
   "applicantExecutor" : "Applicant (you)",
   "furtherExecutor": "Applicant",
   "optionYes": "Yes",
