DTSPB-4749 Added error message for Parent die before

--- a/app/resources/en/translation/executors/parentdiebefore.json
+++ b/app/resources/en/translation/executors/parentdiebefore.json
@@ -1,13 +1,13 @@
 {
-  "question": "Did this person’s parent ({{ deceasedName }}’s child) die before {{ deceasedName }}?",
-  "hintText": "{{ deceasedName }}’s grandchildren are only entitled to apply if their parent ({{ deceasedName }}’s child) died before {{ deceasedName }}.",
+  "question": "Did this person&rsquo;s parent ({{ deceasedName }}&rsquo;s child) die before {{ deceasedName }}?",
+  "hintText": "{{ deceasedName }}&rsquo;s grandchildren are only entitled to apply if their parent ({{ deceasedName }}&rsquo;s child) died before {{ deceasedName }}.",
   "optionYes": "Yes",
   "optionNo": "No",
   "theDeceased": "the deceased",
 
   "errors": {
-    "diedEngOrWales": {
-      "required": "Answer &lsquo;yes&rsquo; if the person who died lived in England or Wales or intended to return here"
+    "applicantParentDieBeforeDeceased": {
+      "required": "Select &lsquo;Yes&rsquo; if this person’s parent died before {{ deceasedName }}"
     }
   }
 }
