--- a/app/resources/cy/translation/executors/parentdiebefore.json
+++ b/app/resources/cy/translation/executors/parentdiebefore.json
@@ -6,8 +6,8 @@
   "theDeceased": "the deceased",
 
   "errors": {
-    "diedEngOrWales": {
-      "required": "Answer &lsquo;yes&rsquo; if the person who died lived in England or Wales or intended to return here"
+    "applicantParentDieBeforeDeceased": {
+      "required": "Select &lsquo;Yes&rsquo; if this person’s parent died before {{ deceasedName }}"
     }
   }
 }
