--- a/app/resources/en/translation/executors/coapplicantname.json
+++ b/app/resources/en/translation/executors/coapplicantname.json
@@ -9,7 +9,9 @@
 
   "errors": {
     "fullName": {
-      "required": "Enter the applicant’s full name"
+      "required": "Enter the applicant’s full name",
+      "minLength": "Name must be 2 characters or more",
+      "maxLength": "Name must be 100 characters or less"
     }
   }
 }
