DTSPB-4728 add conponent tests for co-applicant adoption place & adopted in

--- a/app/resources/cy/translation/executors/adoptedin.json
+++ b/app/resources/cy/translation/executors/adoptedin.json
@@ -1,12 +1,12 @@
 {
   "title": "Co-Applicant adopted in",
-  "question": "A gafodd {{ applicantName }} ei fabwysiadu&rsquo;r gyfreithlon i deulu {{ deceasedName }}?",
+  "question": "A gafodd {applicantName} ei fabwysiadu&rsquo;r gyfreithlon i deulu {deceasedName}?",
   "optionYes": "Do",
   "optionNo": "Naddo",
 
   "errors": {
     "adoptedIn": {
-      "required": "Dewiswch &lsquo;Do&rsquo; os cafodd {{ applicantName }} ei fabwysiadu’n gyfreithlon i deulu {{ deceasedName }}?"
+      "required": "Dewiswch &lsquo;Do&rsquo; os cafodd {applicantName} ei fabwysiadu’n gyfreithlon i deulu {deceasedName}?"
     }
   }
 }
