--- a/app/resources/en/translation/executors/adoptedin.json
+++ b/app/resources/en/translation/executors/adoptedin.json
@@ -1,12 +1,12 @@
 {
   "title": "Co-Applicant adopted in",
-  "question": "Was {{ applicantName }} legally adopted in to {{ deceasedName }}&rsquo;s family?",
+  "question": "Was {applicantName} legally adopted in to {deceasedName}&rsquo;s family?",
   "optionYes": "Yes",
   "optionNo": "No",
 
   "errors": {
     "adoptedIn": {
-      "required": "Select &lsquo;Yes&rsquo; if {{ applicantName }} was adopted in to {{ deceasedName }}’s family"
+      "required": "Select &lsquo;Yes&rsquo; if {applicantName} was adopted in to {deceasedName}&rsquo;s family"
     }
   }
 }
