DTSPB-4728 add conponent tests for co-applicant adopted out

--- a/app/resources/cy/translation/executors/adoptedout.json
+++ b/app/resources/cy/translation/executors/adoptedout.json
@@ -1,12 +1,12 @@
 {
   "title": "Co-Applicant adopted out",
-  "question": "A gafodd {{ applicantName }} ei fabwysiadu’n gyfreithlon allan o deulu {{ deceasedName }} (ei roi i ffwrdd i gael ei fabwysiadu)?",
+  "question": "A gafodd {applicantName} ei fabwysiadu’n gyfreithlon allan o deulu {deceasedName} (ei roi i ffwrdd i gael ei fabwysiadu)?",
   "optionYes": "Do",
   "optionNo": "Naddo",
 
   "errors": {
     "adoptedOut": {
-      "required": "Dewiswch &lsquo;Do&rsquo; os cafodd {{ applicantName }} ei fabwysiadu&rsquo;n gyfreithlon allan o deulu {{ deceasedName }}?"
+      "required": "Dewiswch &lsquo;Do&rsquo; os cafodd {applicantName} ei fabwysiadu&rsquo;n gyfreithlon allan o deulu {deceasedName}?"
     }
   }
 }
