--- a/app/resources/cy/translation/executors/parentadoptedout.json
+++ b/app/resources/cy/translation/executors/parentadoptedout.json
@@ -1,12 +1,12 @@
 {
   "title": "Parent adopted out",
-  "question": "Did {{ deceasedName }} legally adopt {{ applicantName }}’s parent ({{ deceasedName }}’s child) out of their family (give them up for adoption)?",
+  "question": "A wnaeth {deceasedName} fabwysiadu rhiant ({applicantName }} plentyn ({deceasedName}) yn gyfreithlon allan o’u teulu nhw (eu rhoi i ffwrdd i gael eu mabwysiadu)?",
   "optionYes": "Yes",
   "optionNo": "No",
 
   "errors": {
     "applicantParentAdoptedOut": {
-      "required": "Select ‘Yes’ if {{ applicantName }}’s parent was adopted out of {{ deceasedName }}’s family"
+      "required": "Dewiswch ‘Do’ os cafodd rhiant {applicantName} eu mabwysiadu allan o deulu {deceasedName}"
     }
   }
 }
