--- a/app/resources/en/translation/details/childadoptedin.json
+++ b/app/resources/en/translation/details/childadoptedin.json
@@ -7,7 +7,8 @@
 
   "errors": {
     "childAdoptedIn": {
-      "required": "Select &lsquo;Yes&rsquo; if {deceasedName} legally adopted you"
+      "requiredChild": "Select &lsquo;Yes&rsquo; if {deceasedName} legally adopted you",
+      "requiredGrandchild": "Select &lsquo;Yes&rsquo; if {deceasedName} legally adopted your parent"
     }
   }
 }
