--- a/app/resources/cy/translation/details/childadoptedout.json
+++ b/app/resources/cy/translation/details/childadoptedout.json
@@ -1,6 +1,9 @@
+
 {
   "title": "A wnaeth yr unigolyn sydd wedi marw eich mabwysiadu&rsquo;n gyfreithlon allan o&rsquo;u teulu nhw (eich rhoi i ffwrdd i gael eich mabwysiadu)?",
   "question": "A wnaeth {deceasedName} eich mabwysiadu&rsquo;n gyfreithlon allan o&rsquo;u teulu nhw (eich rhoi i ffwrdd i gael eich mabwysiadu)?",
+  "childQuestion": "A wnaeth {deceasedName} eich mabwysiadu&rsquo;n gyfreithlon allan o&rsquo;u teulu nhw (eich rhoi i ffwrdd i gael eich mabwysiadu)?",
+  "grandchildQuestion": "A wnaeth {deceasedName} fabwysiadu (plentyn eich rhiant {deceasedName}) allan o’u teulu nhw (eu rhoi i ffwrdd i gael eu mabwysiadu)?",
   "optionYes": "Do",
   "optionNo": "Naddo",
 
