--- a/app/resources/en/translation/details/adoptionplace.json
+++ b/app/resources/en/translation/details/adoptionplace.json
@@ -5,7 +5,7 @@
   "optionNo": "No",
 
   "errors": {
-    "childAdoptionPlace": {
+    "adoptionPlace": {
       "required": "Select &lsquo;Yes&rsquo; if the adoption took place in England or Wales"
     }
   }
