--- a/app/resources/cy/translation/details/adoptionplace.json
+++ b/app/resources/cy/translation/details/adoptionplace.json
@@ -1,5 +1,5 @@
 {
-  "title": "Ymhle cawsoch eich mabwysiadu",
+  "title": "A ddigwyddodd y mabwysiadu yng Nghymru neu Loegr?",
   "question": "A ddigwyddodd y mabwysiadu yng Nghymru neu Loegr?",
   "optionYes": "Do",
   "optionNo": "Naddo",
