--- a/app/resources/cy/translation/details/grandchildadoptedout.json
+++ b/app/resources/cy/translation/details/grandchildadoptedout.json
@@ -1,11 +1,11 @@
 {
-  "title": "Grandchild adopted out",
-  "question": "Did your parent ({deceasedName}'s child) legally adopt you out of the family (give you up for adoption)?",
-  "optionYes": "Yes",
-  "optionNo": "No",
+  "title": "A wnaeth eich rhiant (plentyn yr unigolyn sydd wedi marw eich mabwysiadu&rsquo;n gyfreithlon allan o&rsquo;u teulu nhw (eich rhoi i ffwrdd i gael eich mabwysiadu)?",
+  "question": "A wnaeth eich rhiant (plentyn {deceasedName} eich mabwysiadu&rsquo;n gyfreithlon allan o&rsquo;u teulu nhw (eich rhoi i ffwrdd i gael eich mabwysiadu)?",
+  "optionYes": "Do",
+  "optionNo": "Naddo",
 
   "errors": {
-    "childAdoptedIn": {
+    "grandchildAdoptedOut": {
       "required": "Select &lsquo;Yes&rsquo; if your parent gave you up for adoption"
     }
   }
