--- a/app/resources/cy/translation/details/adoptedin.json
+++ b/app/resources/cy/translation/details/adoptedin.json
@@ -1,15 +1,14 @@
 {
   "title": "A wnaeth yr unigolyn sydd wedi marw eich mabwysiadau&rsquo;n gyfreithlon i mewn i&rsquo;w teulu nhw?",
-  "question": "A wnaeth {deceasedName} eich mabwysiadau&rsquo;n gyfreithlon i mewn i&rsquo;w teulu nhw?",
   "childQuestion": "A wnaeth {deceasedName} eich mabwysiadau&rsquo;n gyfreithlon i mewn i&rsquo;w teulu nhw?",
-  "grandchildQuestion": "A wnaeth {deceasedName} fabwysiadu plentyn eich rhiant {{ deceased name }}) yn gyfreithlon?",
+  "grandchildQuestion": "A wnaeth {deceasedName} fabwysiadu plentyn eich rhiant {deceasedName}) yn gyfreithlon?",
   "optionYes": "Do",
   "optionNo": "Naddo",
 
   "errors": {
     "adoptedIn": {
       "requiredChild": "Dewiswch &lsquo;Do&rsquo; os wnaeth {deceasedName} eich mabwysiadu&rsquo;n gyfreithlon",
-      "requiredGrandchild": "Select &lsquo;Yes&rsquo; if {deceasedName} legally adopted your parent"
+      "requiredGrandchild": "Dewiswch &lsquo;Do&rsquo; os wnaeth {deceasedName} fabwysiadu eich rhiant yn gyfreithlon"
     }
   }
 }
