--- a/app/resources/cy/translation/details/adoptedout.json
+++ b/app/resources/cy/translation/details/adoptedout.json
@@ -1,16 +1,15 @@
 
 {
   "title": "A wnaeth yr unigolyn sydd wedi marw eich mabwysiadu&rsquo;n gyfreithlon allan o&rsquo;u teulu nhw (eich rhoi i ffwrdd i gael eich mabwysiadu)?",
-  "question": "A wnaeth {deceasedName} eich mabwysiadu&rsquo;n gyfreithlon allan o&rsquo;u teulu nhw (eich rhoi i ffwrdd i gael eich mabwysiadu)?",
   "childQuestion": "A wnaeth {deceasedName} eich mabwysiadu&rsquo;n gyfreithlon allan o&rsquo;u teulu nhw (eich rhoi i ffwrdd i gael eich mabwysiadu)?",
-  "grandchildQuestion": "A wnaeth {deceasedName} fabwysiadu (plentyn eich rhiant {deceasedName}) allan o’u teulu nhw (eu rhoi i ffwrdd i gael eu mabwysiadu)?",
+  "grandchildQuestion": "A wnaeth {deceased name} fabwysiadu eich rhiant ({deceased name} yn gyfreithlon allan o&rsquo;u teulu nhw (eu rhoi i ffwrdd i gael eu mabwysiadu)",
   "optionYes": "Do",
   "optionNo": "Naddo",
 
   "errors": {
     "adoptedOut": {
       "requiredChild": "Dewiswch &lsquo;Do&rsquo; os wnaeth {deceasedName} eich rhoi i ffwrdd i gael eich mabwysiadu",
-      "requiredGrandchild": "Select &lsquo;Yes&rsquo; if {deceasedName} gave your parent up for adoption"
+      "requiredGrandchild": "Dewiswch &lsquo;Do&rsquo; os wnaeth {deceasedName} roi eich rhiant i ffwrdd i gael eu mabwysiadu"
     }
   }
 }
