--- a/app/resources/en/translation/details/adoptedin.json
+++ b/app/resources/en/translation/details/adoptedin.json
@@ -1,8 +1,7 @@
 {
   "title": "Child adopted in",
-  "question": "Did {deceasedName} legally adopt you into their family?",
   "childQuestion": "Did {deceasedName} legally adopt you into their family?",
-  "grandchildQuestion": "Did {deceasedName} legally adopt your parent ({deceasedName}'s child)?",
+  "grandchildQuestion": "Did {deceasedName} legally adopt your parent ({deceasedName}&rsquo;s child)?",
   "optionYes": "Yes",
   "optionNo": "No",
 
