--- a/app/resources/en/translation/details/adoptedout.json
+++ b/app/resources/en/translation/details/adoptedout.json
@@ -1,7 +1,7 @@
 {
   "title": "Child adopted out",
   "childQuestion": "Did {deceasedName} legally adopt you out of their family (give you up for adoption)?",
-  "grandchildQuestion": "Did {deceasedName} legally adopt your parent ({deceasedName}’s child) out of their family (give them up for adoption)?",
+  "grandchildQuestion": "Did {deceasedName} legally adopt your parent ({deceasedName}&rsquo;s child) out of their family (give them up for adoption)?",
   "optionYes": "Yes",
   "optionNo": "No",
 
