--- a/app/resources/en/translation/details/grandchildadoptedout.json
+++ b/app/resources/en/translation/details/grandchildadoptedout.json
@@ -1,11 +1,11 @@
 {
   "title": "Grandchild adopted out",
-  "question": "Did your parent ({deceasedName}'s child) legally adopt you out of the family (give you up for adoption)?",
+  "question": "Did your parent ({deceasedName}&rsquo;s child) legally adopt you out of the family (give you up for adoption)?",
   "optionYes": "Yes",
   "optionNo": "No",
 
   "errors": {
-    "childAdoptedIn": {
+    "grandchildAdoptedOut": {
       "required": "Select &lsquo;Yes&rsquo; if your parent gave you up for adoption"
     }
   }
