--- a/app/resources/cy/translation/details/grandchildadoptedin.json
+++ b/app/resources/cy/translation/details/grandchildadoptedin.json
@@ -6,7 +6,7 @@
 
   "errors": {
     "grandchildAdoptedIn": {
-      "required": "Select &lsquo;Yes&rsquo; if your parent legally adopted you"
+      "required": "Dewiswch &lsquo;Do&rsquo; os wnaeth eich rhiant eich mabwysiadu Select &lsquo;Yes&rsquo; if your parent legally adopted you"
     }
   }
 }
