--- a/app/resources/en/translation/deceased/grandchildparenthasallchildrenover18.json
+++ b/app/resources/en/translation/deceased/grandchildparenthasallchildrenover18.json
@@ -1,14 +1,14 @@
 {
   "title": "All children over 18",
-  "question": "Are all of {deceasedName}&rsquo;s children 18 or older?",
+  "question": "Are all of these children 18 or older?",
   "paragraph": "You do not need to include any children that died after {deceasedName}.",
   "optionYes": "Yes",
   "optionNo": "No",
   "theDeceased": "the deceased",
 
   "errors": {
-    "allChildrenOver18": {
-      "required": "Select &lsquo;Yes&rsquo; if all of these children are 18 or older"
+    "grandchildParentHasAllChildrenOver18": {
+      "required": "Select &lsquo;Yes&rsquo; if all of the children are 18 or older"
     }
   }
 }
