--- a/app/resources/cy/translation/details/adoptedout.json
+++ b/app/resources/cy/translation/details/adoptedout.json
@@ -3,13 +3,15 @@
   "title": "A wnaeth yr unigolyn sydd wedi marw eich mabwysiadu&rsquo;n gyfreithlon allan o&rsquo;u teulu nhw (eich rhoi i ffwrdd i gael eich mabwysiadu)?",
   "childQuestion": "A wnaeth {deceasedName} eich mabwysiadu&rsquo;n gyfreithlon allan o&rsquo;u teulu nhw (eich rhoi i ffwrdd i gael eich mabwysiadu)?",
   "grandchildQuestion": "A wnaeth {deceased name} fabwysiadu eich rhiant ({deceased name} yn gyfreithlon allan o&rsquo;u teulu nhw (eu rhoi i ffwrdd i gael eu mabwysiadu)",
+  "parentQuestion": "A wnaethoch chi fabwysiadu {deceasedName} yn gyfreithlon allan o’ch teulu (eu rhoi i ffwrdd i gael eu mabwysiadu)?",
   "optionYes": "Do",
   "optionNo": "Naddo",
 
   "errors": {
     "adoptedOut": {
       "requiredChild": "Dewiswch &lsquo;Do&rsquo; os wnaeth {deceasedName} eich rhoi i ffwrdd i gael eich mabwysiadu",
-      "requiredGrandchild": "Dewiswch &lsquo;Do&rsquo; os wnaeth {deceasedName} roi eich rhiant i ffwrdd i gael eu mabwysiadu"
+      "requiredGrandchild": "Dewiswch &lsquo;Do&rsquo; os wnaeth {deceasedName} roi eich rhiant i ffwrdd i gael eu mabwysiadu",
+      "requiredParent": "Dewiswch &lsquo;Do&rsquo; os wnaethoch chi roi {deceasedName} i ffwrdd i gael eich mabwysiadu"
     }
   }
 }
