--- a/app/resources/en/translation/details/adoptedin.json
+++ b/app/resources/en/translation/details/adoptedin.json
@@ -2,13 +2,15 @@
   "title": "Child adopted in",
   "childQuestion": "Did {deceasedName} legally adopt you into their family?",
   "grandchildQuestion": "Did {deceasedName} legally adopt your parent ({deceasedName}&rsquo;s child)?",
+  "parentQuestion": "Did you legally adopt {deceasedName} in to your family?",
   "optionYes": "Yes",
   "optionNo": "No",
 
   "errors": {
     "adoptedIn": {
       "requiredChild": "Select &lsquo;Yes&rsquo; if {deceasedName} legally adopted you",
-      "requiredGrandchild": "Select &lsquo;Yes&rsquo; if {deceasedName} legally adopted your parent"
+      "requiredGrandchild": "Select &lsquo;Yes&rsquo; if {deceasedName} legally adopted your parent",
+      "requiredParent": "Select &lsquo;Yes&rsquo; if you legally adopted {deceasedName}"
     }
   }
 }
